pre-release testing for 2-player mode, still needs testing and improvement